Fix fields names

--- a/config/pods-config.json
+++ b/config/pods-config.json
@@ -1,7 +1,7 @@
 {
   "@meta": {
     "version": "2.9.13",
-    "build": 1681673092
+    "build": 1681675516
   },
   "settings": {
     "types_only": "0",
@@ -54,7 +54,7 @@
           "weight": 0,
           "fields": [
             {
-              "name": "description_courte",
+              "name": "short_description",
               "id": 50,
               "label": "Description courte",
               "description": "",
@@ -72,11 +72,35 @@
               "rest_pick_depth": "1"
             },
             {
-              "name": "acteurs_actrices",
+              "name": "duration",
+              "id": 165,
+              "label": "Dur\u00e9e",
+              "description": "",
+              "weight": 1,
+              "type": "number",
+              "sister_id": "--\u00a0S\u00e9lectionnez\u00a0--",
+              "required": "0",
+              "required_help_boolean": "0",
+              "number_format_type": "number",
+              "number_format": "i18n",
+              "number_decimals": "0",
+              "number_format_soft": "0",
+              "number_step": "1",
+              "number_max_length": "4",
+              "number_html5": "1",
+              "repeatable": "0",
+              "repeatable_format": "default",
+              "roles_allowed": "administrator",
+              "rest_pick_response": "array",
+              "rest_pick_depth": "1",
+              "number_min": "0"
+            },
+            {
+              "name": "casting_description",
               "id": 51,
               "label": "Acteurs\/actrices",
               "description": "",
-              "weight": 1,
+              "weight": 2,
               "type": "text",
               "sister_id": "--\u00a0S\u00e9lectionnez\u00a0--",
               "required": "0",
@@ -94,7 +118,7 @@
               "id": 55,
               "label": "Synopsis",
               "description": "",
-              "weight": 2,
+              "weight": 3,
               "type": "wysiwyg",
               "sister_id": "--\u00a0S\u00e9lectionnez\u00a0--",
               "required": "0",
@@ -107,33 +131,9 @@
               "rest_pick_depth": "1"
             },
             {
-              "name": "projections_vf",
+              "name": "shows_vf",
               "id": 53,
               "label": "Projections VF",
-              "description": "",
-              "weight": 3,
-              "type": "datetime",
-              "sister_id": "--\u00a0S\u00e9lectionnez\u00a0--",
-              "required": "0",
-              "required_help_boolean": "0",
-              "datetime_type": "format",
-              "datetime_format": "ymd_dash",
-              "datetime_time_type": "24",
-              "datetime_time_format": "h_mma",
-              "datetime_time_format_24": "hh_mm",
-              "datetime_allow_empty": "1",
-              "datetime_html5": "0",
-              "repeatable": "1",
-              "repeatable_format": "custom",
-              "roles_allowed": "administrator",
-              "rest_pick_response": "array",
-              "rest_pick_depth": "1",
-              "repeatable_format_separator": ","
-            },
-            {
-              "name": "projections_vf_stsme",
-              "id": 79,
-              "label": "Projections VF ST-SME",
               "description": "",
               "weight": 4,
               "type": "datetime",
@@ -155,9 +155,9 @@
               "repeatable_format_separator": ","
             },
             {
-              "name": "projections_vost",
-              "id": 78,
-              "label": "Projections VOST",
+              "name": "shows_vf_stsme",
+              "id": 79,
+              "label": "Projections VF ST-SME",
               "description": "",
               "weight": 5,
               "type": "datetime",
@@ -179,11 +179,35 @@
               "repeatable_format_separator": ","
             },
             {
-              "name": "affiche",
+              "name": "shows_vost",
+              "id": 78,
+              "label": "Projections VOST",
+              "description": "",
+              "weight": 6,
+              "type": "datetime",
+              "sister_id": "--\u00a0S\u00e9lectionnez\u00a0--",
+              "required": "0",
+              "required_help_boolean": "0",
+              "datetime_type": "format",
+              "datetime_format": "ymd_dash",
+              "datetime_time_type": "24",
+              "datetime_time_format": "h_mma",
+              "datetime_time_format_24": "hh_mm",
+              "datetime_allow_empty": "1",
+              "datetime_html5": "0",
+              "repeatable": "1",
+              "repeatable_format": "custom",
+              "roles_allowed": "administrator",
+              "rest_pick_response": "array",
+              "rest_pick_depth": "1",
+              "repeatable_format_separator": ","
+            },
+            {
+              "name": "poster",
               "id": 63,
               "label": "Affiche",
               "description": "",
-              "weight": 6,
+              "weight": 7,
               "type": "file",
               "sister_id": "--\u00a0S\u00e9lectionnez\u00a0--",
               "required": "0",
@@ -211,11 +235,11 @@
               "rest_pick_depth": "1"
             },
             {
-              "name": "bande_annonce",
+              "name": "trailer",
               "id": 64,
               "label": "Bande annonce",
               "description": "",
-              "weight": 7,
+              "weight": 8,
               "type": "oembed",
               "sister_id": "--\u00a0S\u00e9lectionnez\u00a0--",
               "required": "0",
